--- a/style.css
+++ b/style.css
@@ -10,8 +10,19 @@
    left: 0;
    width: 100%;
    height: 100%;
-   background: url('bg/grey-blue.jpeg') center center no-repeat;
+   background: url('bg/greypattern.jpeg') center no-repeat;
    background-size: cover;
-   opacity: 1;
+   /* opacity: 0.1; */
+   background-color: rgba(2, 34, 72, 0.9);
+   background-blend-mode: multiply;
    z-index: -1;
+   background-attachment: fixed;
+}
+
+h1, h2 {
+   font-family: Copperplate, Garamond, serif;
+}
+
+p, li {
+   font-family: Verdana, sans-serif;
 }
