--- a/style.css
+++ b/style.css
@@ -26,3 +26,9 @@ h1, h2 {
 p, li {
    font-family: Verdana, sans-serif;
 }
+
+.stmt {
+   padding-right: 30px;
+   padding-left: 30px;
+   text-align: justify;
+}
